--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -6,7 +6,8 @@ name: test
 on:
   # Triggers the workflow on push or pull request events but only for the "main" branch
   push:
-
+  schedule:
+    - cron: "*/5 * * * *"
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -15,7 +16,7 @@ on:
 jobs:
   # This workflow contains a single job called "build"
   build:
-    # The type of runner that the job will run on
+    # The type of runner that the job will run on   
     runs-on: ubuntu-latest
 
     # Steps represent a sequence of tasks that will be executed as part of the job
