Fix indentation for environment variable in workflow

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -18,11 +18,13 @@ jobs:
   build:
     # The type of runner that the job will run on   
     runs-on: ubuntu-latest
-  env:
-    GH_TOKEN: ${{secrets.GITHUB_TOKEN}} 
+    env:
+      GH_TOKEN: ${{secrets.GITHUB_TOKEN}} 
     # Steps represent a sequence of tasks that will be executed as part of the job
     steps:
       # Checks-out your repository under $GITHUB_WORKSPACE, so your job can access it
+      - run: env
+      - run: gh auth status
       - run: pwd && ls -la
       - uses: actions/checkout@v4
       - run: pwd && ls -la
